--- a/fotolibro.html
+++ b/fotolibro.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<!-- TODO: EDITAR -->
 <html lang="es">
 
-<!-- TODO: EDITAR -->
 <head>
-    <!-- TODO: EDITAR -->
     <title>FOTOLIBRO / EL ARTE DE LA RUINA</title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Joaquín Solla Vázquez, Manuel Estévez Murado">
-    <!-- TODO: EDITAR -->
-    <meta name="description" content="Manuel Estévez Murado: Fotolibro">
-    <!-- TODO: EDITAR -->
-    <meta name="keywords" content="...">
+    <meta name="description" content="El arte de la ruina: Fotolibro -&nbsp;&copy;&nbsp;Manuel Estévez Murado 2023">
+    <meta name="keywords" content="El arte de la ruina, arte, ruina, arte de la ruina, Manuel Estevez, Manuel Estevez Murado,
+    Joaquin Solla, Joaquin Solla Vazquez, Pontevedra, Bellas artes, uvigo, Ponte Caldelas, fotografia, urbex, Fujifilm, 2023, fotolibro, fotografias,
+    galicia, mapa, abandonado, tienda, tfg, trabajo fin de grado">
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fotolibro.css">
