--- a/galeria/naturaleza.html
+++ b/galeria/naturaleza.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<!-- TODO: EDITAR -->
 <html lang="es">
 
-<!-- TODO: EDITAR -->
 <head>
-  <!-- TODO: EDITAR -->
   <title>NATURALEZA / FOTOGRAFÍAS / EL ARTE DE LA RUINA</title>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Joaquín Solla Vázquez, Manuel Estévez Murado">
-  <!-- TODO: EDITAR -->
-  <meta name="description" content="Manuel Estévez Murado: Fotografías: Naturaleza">
-  <!-- TODO: EDITAR -->
-  <meta name="keywords" content="...">
+  <meta name="description" content="El arte de la ruina: Naturaleza -&nbsp;&copy;&nbsp;Manuel Estévez Murado 2023">
+  <meta name="keywords" content="El arte de la ruina, arte, ruina, arte de la ruina, Manuel Estevez, Manuel Estevez Murado,
+    Joaquin Solla, Joaquin Solla Vazquez, Pontevedra, Bellas artes, uvigo, Ponte Caldelas, fotografia, urbex, Fujifilm, 2023, fotolibro, fotografias,
+    galicia, mapa, abandonado, tienda, tfg, trabajo fin de grado, naturaleza">
 
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/galeria.css">
