--- a/fotolibro.html
+++ b/fotolibro.html
@@ -92,7 +92,7 @@
                 </div>
             </div>
 
-            <p id="turn-device-message"><i class="fa fa-rotate-left"></i>&nbsp;Rota tu dispositivo para una mejor experiencia.</p>
+            <p id="turn-device-message"><i class="fa fa-window-maximize"></i>&nbsp;+&nbsp;<i class="fa fa-rotate-left"></i>&nbsp;Activa el modo pantalla completa y rota tu dispositivo para una mejor experiencia.</p>
             <div class="book-container margin-top">
                 <iframe id="book" style="width:100%;height:100%" src="https://online.fliphtml5.com/yoelk/gwib/"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>
             </div>
