Updated index carousel

--- a/index.html
+++ b/index.html
@@ -47,11 +47,16 @@
         <div id="bg-carousel"></div>
         <script>
             const images = [
-                'url(assets/thumbnail/geometrica/DSCF9206.webp)',
-                'url(assets/thumbnail/graffitis/DSCF3532.webp)',
-                'url(assets/thumbnail/interiores/DSCF0311-HDR.webp)',
-                'url(assets/thumbnail/texturas/DSCF1296.webp)',
-                'url(assets/index/DJI_0169_crop.webp)',
+                'url(assets/index/carousel_3.webp)',
+                'url(assets/index/carousel_4.webp)',
+                'url(assets/index/carousel_5.webp)',
+                'url(assets/index/carousel_6.webp)',
+                'url(assets/index/carousel_7.webp)',
+                'url(assets/index/carousel_1.webp)',
+                'url(assets/index/carousel_8.webp)',
+                'url(assets/index/carousel_9.webp)',
+
+                'url(assets/index/carousel_2.webp)',
             ];
             function changeBackground() {
                 const div = document.getElementById('bg-carousel');
