Updated index carousel

--- a/index.html
+++ b/index.html
@@ -44,7 +44,17 @@
 
     <div class="index-home body-section">
 
-        <div id="bg-carousel"></div>
+        <div id="bg-carousel">
+            <img src="assets/index/carousel_2.webp" alt="" style="width: 0; height: 0; opacity: 0;">
+            <img src="assets/index/carousel_3.webp" alt="" style="width: 0; height: 0; opacity: 0;">
+            <img src="assets/index/carousel_4.webp" alt="" style="width: 0; height: 0; opacity: 0;">
+            <img src="assets/index/carousel_5.webp" alt="" style="width: 0; height: 0; opacity: 0;">
+            <img src="assets/index/carousel_6.webp" alt="" style="width: 0; height: 0; opacity: 0;">
+            <img src="assets/index/carousel_7.webp" alt="" style="width: 0; height: 0; opacity: 0;">
+            <img src="assets/index/carousel_8.webp" alt="" style="width: 0; height: 0; opacity: 0;">
+            <img src="assets/index/carousel_9.webp" alt="" style="width: 0; height: 0; opacity: 0;">
+            <img src="assets/index/carousel_1.webp" alt="" style="width: 0; height: 0; opacity: 0;">
+        </div>
         <script>
             const images = [
                 'url(assets/index/carousel_3.webp)',
