Added video poster

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 changeBackground();
             };
         </script>
-        <video id="bg-video" autoplay loop muted>
+        <video id="bg-video" poster="assets/drone_view_frame_0.webp" autoplay loop muted>
             <source src="assets/drone_view_1080_16-9.mp4" type="video/mp4">
             <source src="assets/drone_view_1080_16-9.webm" type="video/webm">
         </video>
