--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <script src="scripts/navigation.js"></script>
         <div></div>
         <div>
+            <p>&nbsp;</p>
             <p><a style="cursor: pointer" onclick="closeNavigationAndScrollToIntro()">FOTOGRAFÍAS</a></p>
             <p><a href="fotolibro.html">FOTOLIBRO</a></p>
             <p><a href="informacion.html">INFORMACIÓN</a></p>
