--- a/mapa.html
+++ b/mapa.html
@@ -31,6 +31,7 @@
       <script src="scripts/navigation.js"></script>
       <div></div>
       <div>
+        <p>&nbsp;</p>
         <p><a href="index.html#fotografias">FOTOGRAFÍAS</a></p>
         <p><a href="fotolibro.html">FOTOLIBRO</a></p>
         <p><a href="informacion.html">INFORMACIÓN</a></p>
