--- a/fotolibro.html
+++ b/fotolibro.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Joaquín Solla Vázquez, Manuel Estévez Murado">
     <meta name="description" content="El arte de la ruina: Fotolibro -&nbsp;&copy;&nbsp;Manuel Estévez Murado 2023">
-    <meta name="keywords" content="El arte de la ruina, arte, ruina, arte de la ruina, Manuel Estevez, Manuel Estevez Murado,
+    <meta name="keywords" content="el arte de la ruina, arte, ruina, arte de la ruina, Manuel Estevez, Manuel Estevez Murado,
     Joaquin Solla, Joaquin Solla Vazquez, Pontevedra, Bellas artes, uvigo, Ponte Caldelas, fotografia, urbex, Fujifilm, 2023, fotolibro, fotografias,
     galicia, mapa, abandonado, tienda, tfg, trabajo fin de grado">
 
