Added Instagram link

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <p><a href="informacion.html">INFORMACIÓN</a></p>
             <p><a href="mapa.html">MAPA</a></p>
             <p><a href="https://www.etsy.com/es/shop/elartedelaruina?ref=seller-platform-mcnav" target="_blank">TIENDA</a></p>
+            <p><a href="https://www.instagram.com/estevez.jpg/" target="_blank">INSTAGRAM</a></p>
             <p><a href="contacto.html">CONTACTO</a></p>
         </div>
         <div></div>
@@ -128,6 +129,8 @@
                         <a href="mapa.html">MAPA</a>
                         &nbsp;
                         <a href="https://www.etsy.com/es/shop/elartedelaruina?ref=seller-platform-mcnav" target="_blank">TIENDA</a>
+                        &nbsp;
+                        <a href="https://www.instagram.com/estevez.jpg/" target="_blank">INSTAGRAM</a>
                         &nbsp;
                         <a href="contacto.html">CONTACTO</a>
                     </p>
