--- a/fotolibro.html
+++ b/fotolibro.html
@@ -37,7 +37,6 @@
                 <p><a href="fotolibro.html">FOTOLIBRO</a></p>
                 <p><a href="informacion.html">INFORMACIÓN</a></p>
                 <p><a href="mapa.html">MAPA</a></p>
-                <p><a href="https://www.etsy.com/es/shop/elartedelaruina?ref=seller-platform-mcnav" target="_blank">TIENDA</a></p>
                 <p><a href="https://www.instagram.com/estevez.jpg/" target="_blank">INSTAGRAM</a></p>
                 <p><a href="contacto.html">CONTACTO</a></p>
             </div>
@@ -60,8 +59,6 @@
                         <a href="informacion.html">INFORMACIÓN</a>
                         &nbsp;
                         <a href="mapa.html">MAPA</a>
-                        &nbsp;
-                        <a href="https://www.etsy.com/es/shop/elartedelaruina?ref=seller-platform-mcnav" target="_blank">TIENDA</a>
                         &nbsp;
                         <a href="https://www.instagram.com/estevez.jpg/" target="_blank">INSTAGRAM</a>
                         &nbsp;
@@ -91,7 +88,7 @@
             <div style="justify-content: center; display: flex">
                 <div class="container-49_5 sides-padding-on-big justify-and-hyphens">
                     <p id="book-explanation">
-                        El fotolibro cuenta con 118 fotografías de lugares abandonados, clasificadas en ocho temáticas: Bodegones, Interiores, Naturaleza, Graffitis, Texturas, Geométrica, Grandes construcciones y Aérea. <a class="content-link" href="https://www.etsy.com/es/shop/elartedelaruina?ref=seller-platform-mcnav" target="_blank">En la tienda</a>, se pueden adquirir 24 de estas fotografías en formato postal.
+                        El fotolibro cuenta con 118 fotografías de lugares abandonados, clasificadas en ocho temáticas: Bodegones, Interiores, Naturaleza, Graffitis, Texturas, Geométrica, Grandes construcciones y Aérea.
                     </p>
                 </div>
             </div>
